# distiller-cm5-sdk

./: .gitignore  CLAUDE.md  README.md  TODO.md  build-deb.sh  eink.conf  install.sh  pyproject.toml
debian/: 99-distiller-eink.rules  changelog  control  copyright  distiller-cm5-sdk.postrm.debhelper  eink-web.service  postinst  postrm  preinst  prerm  rules
src/distiller_cm5_sdk/: __init__.py
src/distiller_cm5_sdk/hardware/audio/: _audio_test.py  audio.py
src/distiller_cm5_sdk/hardware/camera/: _camera_unit_test.py  camera.py
src/distiller_cm5_sdk/hardware/eink/: README.md  __init__.py  _display_test.py  display.py  dithering.py
src/distiller_cm5_sdk/hardware/eink/composer/: DEBUG.md  README.md  __init__.py  cli.py  core.py  debug.conf  layers.py  models.py  run_web.py  templates.py  text.py  web_app.py
src/distiller_cm5_sdk/hardware/eink/composer/services/: __init__.py  composer.py  debug.py  hardware.py  renderer.py  templates.py
src/distiller_cm5_sdk/hardware/eink/composer/static/: index.html
src/distiller_cm5_sdk/hardware/eink/composer/static/css/: components.css  loader.css  main.css  variables.css
src/distiller_cm5_sdk/hardware/eink/composer/static/js/: api.js  app.js  canvas.js  debug.js  layers.js  state.js  tools.js  ui.js  utils.js
src/distiller_cm5_sdk/hardware/eink/composer/templates/: index.html
src/distiller_cm5_sdk/hardware/eink/composer/templates/my_template/: template.json
src/distiller_cm5_sdk/hardware/eink/composer/templates/test_template/: template.json
src/distiller_cm5_sdk/hardware/eink/lib/: Cargo.toml  Makefile.rust  cbindgen.toml
src/distiller_cm5_sdk/hardware/eink/lib/src/: config.rs  display.rs  error.rs  ffi.rs  hardware.rs  image.rs  image_processing.rs  lib.rs  protocol.rs
src/distiller_cm5_sdk/hardware/eink/lib/src/firmware/: README.md  epd122x250.rs  epd128x250.rs  epd240x416.rs  examples.rs  mod.rs
src/distiller_cm5_sdk/hardware/sam/: __init__.py  _button_test.py  led.py  led_interactive_demo.py  sam.py  sam_button_test.py
src/distiller_cm5_sdk/parakeet/: __init__.py  parakeet.py
src/distiller_cm5_sdk/piper/: piper.py
src/distiller_cm5_sdk/whisper/: __init__.py  fast_whisper.py
