[package]
name = "distiller_display_sdk"
version = "0.1.0"
edition = "2024"

[lib]
name = "distiller_display_sdk_shared"
crate-type = ["cdylib", "rlib"]

[dependencies]
gpiod = "0.3"
spidev = "0.7"
lodepng = "3.12"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp", "ico", "pnm", "tga", "dds"] }

[build-dependencies]
cbindgen = "0.29"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3

[[bin]]
name = "test_display"
path = "src/bin/test_display.rs"
